Fix elastic search